--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.5.0",
     "csvtojson": "^2.0.10",
     "json-to-csv-stream": "^1.1.0"
   }
